files/geoip-loader.yaml
apiVersion: v1
kind: Pod
metadata:
  name: geoip-loader
  namespace: monitoring
spec:
  restartPolicy: Never
  containers:
    - name: loader
      image: curlimages/curl
      command: ["sh", "-c", "curl -L https://git.io/GeoLite2-Country.mmdb -o /var/lib/geoip/GeoLite2-Country.mmdb"]
      volumeMounts:
        - name: geoip-db
          mountPath: /var/lib/geoip
  volumes:
    - name: geoip-db
      persistentVolumeClaim:
        claimName: geoip-db
